# primordial

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: demangler
examples/si/: si.cpp
include/: primordial.hpp
include/primordial/: concepts.hpp  dims.hpp  dims_io.hpp  meta.hpp  nq.hpp  nq_io.hpp  powermap.hpp  prime.hpp  quantity.hpp  quantity_io.hpp  supersub.hpp  unit_system.hpp  unit_system_io.hpp  utility.hpp
include/primordial/details/: mult128.hpp  type_traits.hpp
src/: nq_io.cpp  primordial.cpp  supersub.cpp  unit_system_io.cpp
test/: CMakeLists.txt  demangle.cpp  demangle.hpp  test_details.cpp  test_meta.cpp  test_nq.cpp  test_powermap.cpp  test_prime.cpp  test_quantity.cpp  test_unit_system.cpp
